--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@inertiajs/react": "^1.0.16",
+        "react": "^18.3.0",
+        "react-dom": "^18.3.0"
     }
 }
