--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
         "@inertiajs/react": "^1.0.16",
+        "@mui/material": "^5.15.18",
         "react": "^18.3.0",
         "react-dom": "^18.3.0"
     }
