--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "test": "jest"
     },
     "devDependencies": {
         "@headlessui/react": "^1.4.2",
@@ -12,6 +13,7 @@
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
+        "jest": "^29.7.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "react": "^18.2.0",
@@ -25,6 +27,9 @@
         "@inertiajs/react": "^1.0.16",
         "@mui/icons-material": "^5.15.18",
         "@mui/material": "^5.15.18",
+        "@testing-library/jest-dom": "^6.4.5",
+        "@testing-library/react": "^16.0.0",
+        "@testing-library/user-event": "^14.5.2",
         "react": "^18.3.0",
         "react-dom": "^18.3.0"
     }
