--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "test": "jest"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.24.7",
         "@headlessui/react": "^1.4.2",
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
@@ -14,14 +15,16 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
         "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0"
     },
     "dependencies": {
+        "@babel/preset-env": "^7.24.7",
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
         "@inertiajs/react": "^1.0.16",
@@ -30,7 +33,19 @@
         "@testing-library/jest-dom": "^6.4.5",
         "@testing-library/react": "^16.0.0",
         "@testing-library/user-event": "^14.5.2",
-        "react": "^18.3.0",
-        "react-dom": "^18.3.0"
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
+    },
+    "jest": {
+        "transform": {
+            "^.+\\.jsx$": "babel-jest"
+        },
+        "testEnvironment": "jsdom"
+    },
+    "babel": {
+        "presets": [
+            "@babel/preset-env",
+            "@babel/preset-react"
+        ]
     }
 }
