--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "postcss": "^8.4.31",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "tailwindcss": "^3.2.1",
+        "tailwindcss": "^3.4.14",
         "vite": "^5.0"
     },
     "dependencies": {
@@ -33,8 +33,11 @@
         "@testing-library/jest-dom": "^6.4.5",
         "@testing-library/react": "^16.0.0",
         "@testing-library/user-event": "^14.5.2",
+        "i18next": "23.16.4",
+        "i18next-http-backend": "2.6.2",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-i18next": "15.1.1"
     },
     "jest": {
         "transform": {
