--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@inertiajs/react": "^1.0.16",
         "@mui/icons-material": "^5.15.18",
         "@mui/material": "^5.15.18",
+        "@react-pdf/renderer": "^4.1.5",
         "@testing-library/jest-dom": "^6.4.5",
         "@testing-library/react": "^16.0.0",
         "@testing-library/user-event": "^14.5.2",
