--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "@babel/preset-env": "^7.24.7",
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@inertiajs/react": "^1.0.16",
         "@mui/icons-material": "^5.15.18",
         "@mui/material": "^5.15.18",
@@ -37,7 +40,8 @@
         "i18next-http-backend": "2.6.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-i18next": "15.1.1"
+        "react-i18next": "15.1.1",
+        "styled-components": "^6.1.19"
     },
     "jest": {
         "transform": {
