--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@inertiajs/react": "^1.0.16",
-        "@mui/icons-material": "^5.15.18",
-        "@mui/material": "^5.15.18",
+        "@mui/icons-material": "^7.1.2",
+        "@mui/material": "^7.1.2",
+        "@mui/styles": "^6.4.8",
         "@testing-library/jest-dom": "^6.4.5",
         "@testing-library/react": "^16.0.0",
         "@testing-library/user-event": "^14.5.2",
